--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kcrap (0.4.0-1) unstable; urgency=medium
+
+  * Add support for kdb modules
+  * Misc bugfixes
+
+ -- Dan Fuhry <dan@fuhry.com>  Sun, 07 Aug 2022 18:02:27 -0400
+
 kcrap (0.2.3-11) unstable; urgency=medium
 
   * Modify soname patch to set soname properly at compile-time
